--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,7 @@ nav>ul li a {
     background-position: bottom right;
     background-repeat: no-repeat;
     background-size: contain;
+    margin-bottom: 80px;
 }
 .main-camera-image{
     width: 100%;
@@ -82,6 +83,17 @@ border: none;
 padding: 15px;
 }
 
+/* card section styles */
+.card-container{
+    width: 70%;
+    margin: 30px auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 50px;
+    padding: 40px 30px;
+    box-shadow:2px 1px 3px gray 
+}
 /* responsive section  */
 /* for mobile  */
 @media screen and (max-width:576px){
@@ -106,6 +118,13 @@ padding: 15px;
     }
     .banner-btn{
         margin-left: 50px;
+    }
+    .card-container img{
+        width: 45px;
+    }
+    .card-container{
+            gap: 20px;
+            padding: 20px 15px;
     }
 }
 /* for medium devices  */
